2014-03-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.1 released.

2014-03-12  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix i18n on OS X (#324).

2014-03-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.66.0 released.

2014-03-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.65.2 released.

2014-03-09  Carl Hetherington  <cth@carlh.net>

	* Restore old behaviour of "no-stretch" mode with crop.

	* Fix display of no-scale display mode in the player.

2014-03-08  Carl Hetherington  <cth@carlh.net>

	* Version 1.65.1 released.

2014-03-08  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect audio analyses on multiple-stream content.

	* Support for unsigned 8-bit audio (hmm!).

2014-03-06  Carl Hetherington  <cth@carlh.net>

	* Version 1.65.0 released.

2014-03-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.19 released.

2014-03-05  Carl Hetherington  <cth@carlh.net>

	* Bump maximum audio channels to 12 so that we can
	(crudely at least) get BsL/BsR.

2014-03-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.18 released.

2014-03-04  Carl Hetherington  <cth@carlh.net>

	* Add option to disable all scaling of the input video.

2014-03-03  Carl Hetherington  <cth@carlh.net>

	* Fix rounding of timecodes in at least some cases (#323).

	* Try to prevent OS X from sleeping during DCP encode.

2014-02-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.17 released.

2014-02-26  Carl Hetherington  <cth@carlh.net>

	* Fix missing RMS audio analysis plots in some cases.

	* Fix failure to load sound files with
	non-ASCII paths.

2014-02-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.16 released.

2014-02-23  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg library to git head to fix problems with
	misrecognised frame rates in some MOV files.

2014-02-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.64.15 released.

2014-02-20  Carl Hetherington  <cth@carlh.net>

	* Basic support for 7.1 / HI/VI audio tracks.
