@@ -1,3 +1,9 @@
+2014-03-15  Carl Hetherington  <cth@carlh.net>
+
+	* Remove support for FFmpeg post-processing filters as they apparently
+	do not support > 8bpp.  I don't think they are worth the pain of
+	quantizing and then telling the user what has happened.
+
 2014-03-12  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.66.1 released.
